@@ -2,8 +2,10 @@ package no.hvl.Prosjekt4.util;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
 
 import java.lang.Math;
 
@@ -14,7 +16,6 @@ import no.hvl.Prosjekt4.entity.Ratings;
  * RatingsUtil klassen inneholder metoder for å sortere prosjekter etter gjennomsnittrating, 
  * og for å regne ut gjennomsnittrating for et prosjekt
  */
-
 public class RatingsUtil {
 
 	@Autowired
@@ -22,13 +23,17 @@ public class RatingsUtil {
 	
 	@Autowired
 	ProsjektRepo prosjektrepo;
+	
+	public RatingsUtil() {
+	}
 
-	public List<Prosjektliste> sortedByRatings(String userId) {
+	public List<Prosjektliste> sortedByRatings(ProsjektRepo prosjektrepo, String userId) {
 		List<Prosjektliste> retur = prosjektrepo.findByBrukerid(userId);
 
-		retur.stream()
-				.sorted((p1, p2) -> p2.getGjennomsnittrating().compareTo(p1.getGjennomsnittrating()));
-		Collections.reverse(retur);
+		retur = retur.stream()
+				.sorted((p1, p2) -> p2.getGjennomsnittrating().compareTo(p1.getGjennomsnittrating()))
+				.collect(Collectors.toList());
+		
 
 		return retur;
 	}
@@ -38,10 +43,9 @@ public class RatingsUtil {
 
 		List<Ratings> liste = repo.findByProsjektid(prosjektId);
 
-		List<Integer> verdiListe = liste.stream()
-				.map(x -> x.getVerdi())
-				.map(x -> Integer.parseInt(x))
-				.toList();
+		List<Integer> verdiListe = liste.stream().map(x -> x.getVerdi())
+				.map(x -> Integer.parseInt(x)).collect(Collectors.toList()); 
+				
 
 		Double snitt = verdiListe.stream()
 				.mapToInt(Integer::intValue)
@@ -49,12 +53,13 @@ public class RatingsUtil {
 				.getAsDouble();
 
 		snitt = Math.round(snitt * 10.0) / 10.0;
+		
 
 		retur += snitt;
 
 		return retur;
 	}
-
+	
 	public boolean hasUserRatedProject(RatingRepo repo, String projectId, String username) {
 		List<Ratings> ratings = repo.findByProsjektid(projectId);
 		for (Ratings rating : ratings) {
